# wschat

./: README.md  brittany.yaml  stack.yaml  wschat.cabal
src/: ChatState.hs  Client.hs  Main.hs
