name:                wschat
version:             0.1.0.0
homepage:            https://github.com/leshow/wschat#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           2018 Evan Cameron
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wschat
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ChatState
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , websockets
                     , network
                     , warp
                     , wai
                     , wai-websockets
                     , http-types
                     , async
                     , vector
                     , containers
                     , text
                     , mtl                     
                     , random
                     , unagi-chan
                     , stm
  ghc-options:         -O2 -threaded "-with-rtsopts=-N" -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions:          DeriveFoldable
                             , DeriveFunctor
                             , DeriveGeneric
                             , DeriveTraversable
                             , DeriveLift
                             , DerivingStrategies
                             , GeneralizedNewtypeDeriving
                             , OverloadedStrings
                             , ExistentialQuantification
                             , StandaloneDeriving
                             , ScopedTypeVariables
                             , UnicodeSyntax
                             , BinaryLiterals
                             , NumDecimals
                             , ConstraintKinds
                             , RankNTypes
                             , TypeFamilies
                             , TypeInType
                             , DataKinds
                             , KindSignatures
                             , TypeOperators
                             , TypeApplications
                             , GADTs
                             , NamedFieldPuns
                             , InstanceSigs
                             , MultiParamTypeClasses
                             , FunctionalDependencies
                             , ConstrainedClassMethods
                             , InstanceSigs
                             , FlexibleInstances
                             , FlexibleContexts
                             , BangPatterns
                             , ViewPatterns
                             , PatternGuards
                             , MultiWayIf
                             , EmptyCase
                             , LambdaCase
